--- a/ML.ipynb
+++ b/ML.ipynb
@@ -1284,7 +1284,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x201be3d4550>]"
+       "[<matplotlib.lines.Line2D at 0x1eb797d4a50>]"
       ]
      },
      "execution_count": 45,
@@ -1322,10 +1322,10 @@
     {
      "data": {
       "text/plain": [
-       "([<matplotlib.patches.Wedge at 0x201bc0ae900>,\n",
-       "  <matplotlib.patches.Wedge at 0x201bc2865d0>,\n",
-       "  <matplotlib.patches.Wedge at 0x201bc286ad0>,\n",
-       "  <matplotlib.patches.Wedge at 0x201bc286fd0>],\n",
+       "([<matplotlib.patches.Wedge at 0x1eb774ae3c0>,\n",
+       "  <matplotlib.patches.Wedge at 0x1eb77686ad0>,\n",
+       "  <matplotlib.patches.Wedge at 0x1eb77686fd0>,\n",
+       "  <matplotlib.patches.Wedge at 0x1eb776874d0>],\n",
        " [Text(0.401722049452549, 1.2363734852315638, 'RED'),\n",
        "  Text(-1.1412677396889577, -0.37082063904974033, 'BLUE'),\n",
        "  Text(0.37082109708525907, -1.1412675908639853, 'GREEN'),\n",
@@ -1793,7 +1793,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.JointGrid at 0x201df43dfd0>"
+       "<seaborn.axisgrid.JointGrid at 0x1eb7f989a90>"
       ]
      },
      "execution_count": 53,
@@ -1824,7 +1824,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x201df43ecf0>"
+       "<seaborn.axisgrid.PairGrid at 0x1eb7f98a7b0>"
       ]
      },
      "execution_count": 54,
@@ -2584,7 +2584,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x201df74c2f0>"
+       "<seaborn.axisgrid.FacetGrid at 0x1eb1bcb8980>"
       ]
      },
      "execution_count": 64,
@@ -2616,7 +2616,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\shiva\\AppData\\Local\\Temp\\ipykernel_24840\\273247740.py:1: FutureWarning: \n",
+      "C:\\Users\\shiva\\AppData\\Local\\Temp\\ipykernel_30084\\273247740.py:1: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -2658,7 +2658,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\shiva\\AppData\\Local\\Temp\\ipykernel_24840\\1285741165.py:1: FutureWarning: \n",
+      "C:\\Users\\shiva\\AppData\\Local\\Temp\\ipykernel_30084\\1285741165.py:1: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -3067,7 +3067,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x201e1937890>]"
+       "[<matplotlib.lines.Line2D at 0x1eb1cf1fed0>]"
       ]
      },
      "execution_count": 78,
@@ -3167,7 +3167,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x201e199a350>"
+       "<seaborn.axisgrid.PairGrid at 0x1eb1cf82850>"
       ]
      },
      "execution_count": 81,
@@ -3193,6 +3193,22 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "59b989cc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f23a2e1",
+   "metadata": {},
+   "source": [
+    "# RIDGE AND LASSO REGRESSION "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c7c0d71c",
    "metadata": {},
    "outputs": [],
    "source": []
