--- a/python.ipynb
+++ b/python.ipynb
@@ -160,8 +160,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b1ca8dbd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def primenumbers(num):\n",
+    "    if num>1 :\n",
+    "        if num == 2:\n",
+    "            return f\"{num} is a prime number \"\n",
+    "    for i in range (2,num):\n",
+    "        if num%i==0:\n",
+    "            return f\"{num } is not a prime number \"\n",
+    "    else :\n",
+    "        return f\"{num } is a prime number \"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "26a941c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'13 is a prime number '"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "primenumbers(13\n",
+    "             )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4b711392",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -183,7 +223,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
